xx.xx.20xx: Rhialto
        version 0.8:

19.03.2021: Rhialto
        version 0.7:
        - Fixed the end-of-line check for MARK, EMT, TRAP.
        - Left/right shift operator _; disabled when the -yus option is used.
          Contributed by Stephen Casner.
        - Added some missing instructions: LDCFD, CSM, TSTSET, WRTLCK.

13.02.2021: Rhialto
        version 0.6:
        - Fixed rounding issues with floating point literals.
        - Fixed FPP instructions which take fp immediate operands.
        - Fixed bounds check on FPP AC0-3 operands.
        - Fix listing to show a % before values that represent a register
          number.
        - Added checks for junk text following correct code. This revealed
          some small other issues, now fixed.
        - Added CIS instructions; as an extension, for the Inline variants
          you can specify the descriptor addresses etc as arguments to
          the instruction (much like an implied .word).

25.04.2020: Rhialto
        version 0.5:
        - Fixed bug with checking addressing mode for JSR and bugs
          with .REPT 0, unneeded relocation on pc-relative mode.
        - Very simple .LIST and .NLIST implementation.
        - Add ^pl and ^ph expressions from 2.11BSD's m11.
        - Object-ified macro libraries with an eye to support the .sml
          files from 2.11BSD's m11. But since the given file does not 
          just contain .MACROs (it even contains conditionals) I'm not
          sure how it is supposed to work.
        - Added 2.11BSD/m11 as test files. To make this reasonable, a
          few small features they use have been recognized and ignored.
        - Add -rsx and -rt11 to switch object file format (from Kevin Handy)
        - Add obj2bin from https://github.com/AK6DN/obj2bin.git

09.11.2015: Rhialto
        version 0.4:
        - Fixed various bugs. The most notable was extensive use-
          after-free in the expression tree, which crashed on NetBSD but