@@ -418,54 +418,54 @@ void add_symbols(
     add_sym("WRTLCK", I_WRTLCK, OC_1GEN, &instruction_section, &system_st);
 
     /* FPP instructions */
-    add_sym("ABSD", I_ABSD, OC_FPPDST, &instruction_section, &system_st);
-    add_sym("ABSF", I_ABSF, OC_FPPDST, &instruction_section, &system_st);
-    add_sym("ADDD", I_ADDD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("ADDF", I_ADDF, OC_FPPGENAC, &instruction_section, &system_st);
+    add_sym("ABSD", I_ABSD, OC_FPP_FDST, &instruction_section, &system_st);
+    add_sym("ABSF", I_ABSF, OC_FPP_FDST, &instruction_section, &system_st);
+    add_sym("ADDD", I_ADDD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("ADDF", I_ADDF, OC_FPP_FSRCAC, &instruction_section, &system_st);
     add_sym("CFCC", I_CFCC, OC_NONE, &instruction_section, &system_st);
-    add_sym("CLRD", I_CLRD, OC_FPPDST, &instruction_section, &system_st);
-    add_sym("CLRF", I_CLRF, OC_FPPDST, &instruction_section, &system_st);
-    add_sym("CMPD", I_CMPD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("CMPF", I_CMPF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("DIVD", I_DIVD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("DIVF", I_DIVF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDCDF", I_LDCDF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDCFD", I_LDCFD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDCID", I_LDCID, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDCIF", I_LDCIF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDCLD", I_LDCLD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDCLF", I_LDCLF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDD", I_LDD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDEXP", I_LDEXP, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("LDF", I_LDF, OC_FPPGENAC, &instruction_section, &system_st);
+    add_sym("CLRD", I_CLRD, OC_FPP_FDST, &instruction_section, &system_st);
+    add_sym("CLRF", I_CLRF, OC_FPP_FDST, &instruction_section, &system_st);
+    add_sym("CMPD", I_CMPD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("CMPF", I_CMPF, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("DIVD", I_DIVD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("DIVF", I_DIVF, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("LDCDF", I_LDCDF, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("LDCFD", I_LDCFD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("LDCID", I_LDCID, OC_FPP_SRCAC, &instruction_section, &system_st);
+    add_sym("LDCIF", I_LDCIF, OC_FPP_SRCAC, &instruction_section, &system_st);
+    add_sym("LDCLD", I_LDCLD, OC_FPP_SRCAC, &instruction_section, &system_st);
+    add_sym("LDCLF", I_LDCLF, OC_FPP_SRCAC, &instruction_section, &system_st);
+    add_sym("LDD", I_LDD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("LDEXP", I_LDEXP, OC_FPP_SRCAC, &instruction_section, &system_st);
+    add_sym("LDF", I_LDF, OC_FPP_FSRCAC, &instruction_section, &system_st);
     add_sym("LDFPS", I_LDFPS, OC_1GEN, &instruction_section, &system_st);
-    add_sym("MODD", I_MODD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("MODF", I_MODF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("MULD", I_MULD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("MULF", I_MULF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("NEGD", I_NEGD, OC_FPPDST, &instruction_section, &system_st);
-    add_sym("NEGF", I_NEGF, OC_FPPDST, &instruction_section, &system_st);
+    add_sym("MODD", I_MODD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("MODF", I_MODF, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("MULD", I_MULD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("MULF", I_MULF, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("NEGD", I_NEGD, OC_FPP_FDST, &instruction_section, &system_st);
+    add_sym("NEGF", I_NEGF, OC_FPP_FDST, &instruction_section, &system_st);
     add_sym("SETD", I_SETD, OC_NONE, &instruction_section, &system_st);
     add_sym("SETF", I_SETF, OC_NONE, &instruction_section, &system_st);
     add_sym("SETI", I_SETI, OC_NONE, &instruction_section, &system_st);
     add_sym("SETL", I_SETL, OC_NONE, &instruction_section, &system_st);
     add_sym("STA0", I_STA0, OC_NONE, &instruction_section, &system_st);
     add_sym("STB0", I_STB0, OC_NONE, &instruction_section, &system_st);
-    add_sym("STCDF", I_STCDF, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STCDI", I_STCDI, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STCDL", I_STCDL, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STCFD", I_STCFD, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STCFI", I_STCFI, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STCFL", I_STCFL, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STD", I_STD, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STEXP", I_STEXP, OC_FPPACGEN, &instruction_section, &system_st);
-    add_sym("STF", I_STF, OC_FPPACGEN, &instruction_section, &system_st);
+    add_sym("STCDF", I_STCDF, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STCDI", I_STCDI, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STCDL", I_STCDL, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STCFD", I_STCFD, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STCFI", I_STCFI, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STCFL", I_STCFL, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STD", I_STD, OC_FPP_ACFDST, &instruction_section, &system_st);
+    add_sym("STEXP", I_STEXP, OC_FPP_ACDST, &instruction_section, &system_st);
+    add_sym("STF", I_STF, OC_FPP_ACFDST, &instruction_section, &system_st);
     add_sym("STFPS", I_STFPS, OC_1GEN, &instruction_section, &system_st);
     add_sym("STST", I_STST, OC_1GEN, &instruction_section, &system_st);
-    add_sym("SUBD", I_SUBD, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("SUBF", I_SUBF, OC_FPPGENAC, &instruction_section, &system_st);
-    add_sym("TSTD", I_TSTD, OC_FPPDST, &instruction_section, &system_st);
-    add_sym("TSTF", I_TSTF, OC_FPPDST, &instruction_section, &system_st);
+    add_sym("SUBD", I_SUBD, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("SUBF", I_SUBF, OC_FPP_FSRCAC, &instruction_section, &system_st);
+    add_sym("TSTD", I_TSTD, OC_FPP_FDST, &instruction_section, &system_st);
+    add_sym("TSTF", I_TSTF, OC_FPP_FDST, &instruction_section, &system_st);
 
     /* The CIS instructions */
     add_sym("ADDNI", I_ADDN|I_CIS_I, OC_CIS3, &instruction_section, &system_st);
